# detached_ro-crate_validation

./: .gitignore  README.md  basic_ro-crate-checker.py  basic_ro_crate_checker.py  detached_crate_validator.py  pyproject.toml
.github/workflows/: test.yml
test/: test_validator.py
test/invalid/: extra-toplevel-keys-ro-crate-metadata.json  missing-context-ro-crate-metadata.json  nested-node-ro-crate-metadata.json
test/valid/: basic-ro-crate-metadata.json
